--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
     "name": "Weather2Fish",
-    "description": "Weather guide fishing hobbyists across Britain and Ireland.",
+    "description": "Weather guide for freshwater and saltwater fishing enthusiasts across Britain and Ireland.",
     "slug": "weather2fish",
     "privacy": "public",
     "sdkVersion": "30.0.0",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/w2fish_icon.png",
     "splash": {
       "image": "./assets/splash0.png",
       "resizeMode": "contain",
